Fixed table link in wrong color

--- a/docroot/sites/all/themes/chm_theme_kit/less/content.less
+++ b/docroot/sites/all/themes/chm_theme_kit/less/content.less
@@ -1681,3 +1681,7 @@ body.node-type-species {
     }
   }
 }
+table .views-field-title a,
+table .views-field-title a:hover {
+  color: @link-color-temp;
+}
